language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_guard_clause.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() {\n  let wibble = True\n  case Nil {\n    Nil if wibble -> todo\n    _ -> panic\n  }\n  wibble || False\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() {
  let wibble = True
  case Nil {
    Nil if wibble -> todo
    _ -> panic
  }
  wibble || False
  ↑▔▔▔▔▔         
}


----- AFTER RENAME
-- app.gleam

pub fn main() {
  let wobble = True
  case Nil {
    Nil if wobble -> todo
    _ -> panic
  }
  wobble || False
}
