language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_in_bit_array_pattern.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn starts_with(bits: BitArray, prefix: BitArray) -> Bool {\n  let prefix_size = bit_size(prefix)\n\n  case bits {\n    <<pref:bits-size(prefix_size), _:bits>> if pref == prefix -> True\n    _ -> False\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn starts_with(bits: BitArray, prefix: BitArray) -> Bool {
  let prefix_size = bit_size(prefix)
      ↑▔▔▔▔▔▔▔▔▔▔                   

  case bits {
    <<pref:bits-size(prefix_size), _:bits>> if pref == prefix -> True
    _ -> False
  }
}


----- AFTER RENAME
-- app.gleam

pub fn starts_with(bits: BitArray, prefix: BitArray) -> Bool {
  let size_of_prefix = bit_size(prefix)

  case bits {
    <<pref:bits-size(size_of_prefix), _:bits>> if pref == prefix -> True
    _ -> False
  }
}
