language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_label_shorthand.snap
---
source: language-server/src/tests/rename.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int)\n}\n\npub fn main() {\n  let Wibble(wibble:) = todo\n  wibble + 1\n}\n"
---
----- BEFORE RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int)
}

pub fn main() {
  let Wibble(wibble:) = todo
  wibble + 1
  ↑▔▔▔▔▔    
}


----- AFTER RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int)
}

pub fn main() {
  let Wibble(wibble: wobble) = todo
  wobble + 1
}
