language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_with_label_shorthand.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble {\n  Wibble(first: Int, second: Int)\n}\n\npub fn main() {\n  let second = 2\n  Wibble(first: 1, second:)\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub type Wibble {
  Wibble(first: Int, second: Int)
}

pub fn main() {
  let second = 2
      ↑▔▔▔▔▔    
  Wibble(first: 1, second:)
}


----- AFTER RENAME
-- app.gleam

pub type Wibble {
  Wibble(first: Int, second: Int)
}

pub fn main() {
  let something = 2
  Wibble(first: 1, second: something)
}
