language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_constant_in_bit_array_size_pattern.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport sizes\n\npub fn main() {\n  let assert <<value:size(sizes.byte_size)>> = <<1>>\n  value\n}\n"
---
----- BEFORE RENAME
-- sizes.gleam
pub const byte_size = 8

-- app.gleam

import sizes

pub fn main() {
  let assert <<value:size(sizes.byte_size)>> = <<1>>
                                ↑▔▔▔▔▔▔▔▔           
  value
}


----- AFTER RENAME
-- sizes.gleam
pub const bit_size = 8

-- app.gleam

import sizes

pub fn main() {
  let assert <<value:size(sizes.bit_size)>> = <<1>>
  value
}
