language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_constant_in_clause_guard.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport maths\n\npub fn count_pi(list) {\n  case list {\n    [number, ..rest] if number == maths  . pi -> 1 + count_pi(rest)\n    [_, ..rest] -> count_pi(rest)\n    [] -> 0\n  }\n}\n"
---
----- BEFORE RENAME
-- maths.gleam
pub const pi = 3.14

-- app.gleam

import maths

pub fn count_pi(list) {
  case list {
    [number, ..rest] if number == maths  . pi -> 1 + count_pi(rest)
                                  ↑▔▔▔▔                            
    [_, ..rest] -> count_pi(rest)
    [] -> 0
  }
}


----- AFTER RENAME
-- maths.gleam
pub const pi = 3.14

-- app.gleam

import maths as m

pub fn count_pi(list) {
  case list {
    [number, ..rest] if number == m  . pi -> 1 + count_pi(rest)
    [_, ..rest] -> count_pi(rest)
    [] -> 0
  }
}
